--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,11 +1,11 @@
 # Degree
 - degree: Master of Department of Electrical, Electronic and Computer Engineering
   uni: Gifu University
-  year: 2019 &mdash; 2021(TBD)
+  year: 2019 &mdash; 2021 
   award: Conference Presentations and Paper Submissions
 #  awards: Conference Presentations and Paper Submissions
 #    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
+# summary: If you had any meaningful roles at college, feel free to write about them here
 
 - degree: Bachelor of Department of Electrical, Electronic and Computer Engineering
   uni: Gifu University
