--- a/_data/education.yml
+++ b/_data/education.yml
@@ -5,7 +5,7 @@
   award: Conference Presentations and Paper Submissions
 #  awards: Conference Presentations and Paper Submissions
 #    - award: Summa Cumme Laude graduate
-# summary: If you had any meaningful roles at college, feel free to write about them here
+  summary: Joint research with the automotive and telecommunications industries
 
 - degree: Bachelor of Department of Electrical, Electronic and Computer Engineering
   uni: Gifu University
