--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,7 +1,7 @@
 # Interests
-- description: Cloud engineering#クラウド
+- description: Cloud engineering
 - description: VR/AR/MR
-- description: Machine learning#機械学習
+- description: Machine learning
 - description: Smartphone and internet apps
 - description: 3D modeling and Animation
 - description: Illustration
