--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,8 @@ resume_contact_address:         "1-1 yanagido Gifu, Gifu"
 resume_header_contact_info:     "1-1 yanagido Gifu, Gifu • 501-1193 • takeuchi.haruhiko@gmail.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but keep it brief and concise</p>"
+resume_header_intro: "<p>I'm Haruhiko, a 2nd year of master's program at Gifu University, and I'm called "Haru". I am researching millimeter waves used for autonomous driving, and have recently applied it to machine learning. I'm not only a programmer but also a 3D modeler. To work as SIer from April 2021.</p>"
+#resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but keep it brief and concise</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
