--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "Haruhiko Takeuchi"
-resume_title:                   "Researcher" # 役職
+resume_title:                   "Researcher" 
 
 # used for the contact button in _layouts/resume.html
 resume_contact_email:           "takeuchi.haruhiko@gmail.com"
