--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -6,7 +6,7 @@
   summary: Support for Python programming classes
 
 # VP of Global Communications
-- company: DAINICHI CONSULTANT INC
+- company: DAINICHI CONSULTANT INC.
   position: Internship Student & Developer
   duration: Nov, 2015 &mdash; Oct, 2018
   summary: Regional tourism revitalization projects through industry-government-academia collaboration, etc. <ul class="resume-item-list"><li>Android App</li><li>VR/AR/MR App</li><li>3D Modeling</li><li>Researcher</li></ul>
